Fix regression: Whitespace handling

--- a/src/assets/styles/components/accessibility-state.scss
+++ b/src/assets/styles/components/accessibility-state.scss
@@ -8,8 +8,4 @@
             color: var(--state-#{$name}-foreground);
         }
     }
-    
-    .icon {
-        margin-right: 6px;
-    }
 }
