--- a/src/assets/styles/components/form-error.scss
+++ b/src/assets/styles/components/form-error.scss
@@ -1,8 +1,4 @@
 .form-error {
     color: var(--form-error-color);
     margin-block: 5px;
-    
-    & > .icon {
-        margin-right: 4px;
-    }
 }
