--- a/src/assets/styles/components/info-notice.scss
+++ b/src/assets/styles/components/info-notice.scss
@@ -7,6 +7,6 @@
     
     & > .icon {
         font-size: 15px;
-        margin-right: 4px;
+        margin-right: 1px;
     }
 }
