--- a/src/assets/styles/components/review.scss
+++ b/src/assets/styles/components/review.scss
@@ -33,10 +33,6 @@
         .menu__toggle {
             color: inherit;
         }
-
-        & > .icon {
-            line-height: 0;
-        }
         
         @include dark {
             color: #828282;
