--- a/src/assets/styles/components/route-details.scss
+++ b/src/assets/styles/components/route-details.scss
@@ -79,7 +79,6 @@
     justify-content: center;
     align-items: center;
     font-size: 12px;
-    padding-top: 2px;
     background: #161616;
     color: #ebebeb;
     
