--- a/src/assets/styles/components/tag-list.scss
+++ b/src/assets/styles/components/tag-list.scss
@@ -7,12 +7,6 @@
     font-weight: weight('medium');
     list-style: none;
     padding: 0;
-    
-    .stop-tag {
-        & > .icon {
-            margin-right: 7px;
-        }
-    }
 
     &--rounded {
         gap: 10px;
